cpq301-capstone/force-app/main/default/objects/Business_Size__c/Business_Size__c.object-meta.xml
<CustomObject>
    <label>Business Size</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Business Size Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Sizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>