cpq301-capstone/force-app/main/default/objects/Business_Size__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <formula>Product__r.Name  + &quot; is meant to be sold to &quot; +   CASE(Product_Business_Size__c, &quot;Small&quot;, &quot;small&quot;, &quot;Mid-Market&quot;, &quot;mid-market&quot;, &quot;Enterprise&quot;, &quot;enterprise&quot;, &quot;&quot;) +  &quot; accounts. It is suggested you verify you selection with the accounts team.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>