cpq301-capstone/force-app/main/default/objects/Business_Size__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Business Sizes</relationshipLabel>
    <relationshipName>Business_Sizes</relationshipName>
    <type>Lookup</type>
</CustomField>