cpq301-capstone/force-app/main/default/objects/Business_Size__c/fields/Product_Business_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Business_Size__c</fullName>
    <formula>TEXT(Product__r.Business_Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Business Size</label>
    <type>Text</type>
</CustomField>